bug: fix post preview spacing

--- a/src/assets/styles/block/post.css
+++ b/src/assets/styles/block/post.css
@@ -16,7 +16,7 @@
     & .date {
         position: relative;
         top: 0.75rem;
-        flex: 1 0 10rem;
+        flex: 0 0 10rem;
     }
 }
 
